# adata

./: .gitignore  HISTORY.md  MANIFEST.in  README.md  package.json  pylintrc  pyproject.toml  requirements.txt  setup.py
adata/: __init__.py  __version__.py
adata/bond/: __init__.py  bond_market.py
adata/bond/info/: __init__.py  bond_code.py
adata/bond/market/: __init__.py  bond_market.py  bond_market_sina.py  bond_market_template.py
adata/common/: __init__.py
adata/common/base/: __init__.py  base_req.py  base_ths.py
adata/common/exception/: __init__.py  exception_msg.py  (+1 more)
adata/fund/: __init__.py  etf_market.py
adata/message/: __init__.py
adata/sentiment/: __init__.py  alist.py  hot.py  mine_clearance.py  north_flow.py  securities_margin.py  stock_lifting.py
adata/stock/: __init__.py
docs/: DIC.md  README.md  dataDic.md  index.md  package-lock.json  package.json  quickStart.md  quickstart.md  twine.md  web.md  向阳花.md
docs/.vuepress/: config.ts  navbar.ts  sidebar.ts
tests/: __init__.py  bs4_test.py  code_test.py  index_code_rel_ths.json  jutest.ipynb  stock_test.py  year_test.py
tests/adata/: HTMLTestRunner.py  adata_info_test.py  adata_test.py
tests/adata_test/: AData-0.0.30-beta自动化测试报告-2023-09-03_195626.html  AData-1.0.1自动化测试报告-2023-10-10_000307.html  __init__.py  adata_info_test.py  adata_test.py
tests/other/: bs4_test.py  cid_test.py  cookie_test.py  core_test.py  jutest.ipynb  stock_test.py  test.py  year_test.py
tests/utils/: __init__.py  code.csv  code_test.py  csv_utils.py  sh.xlsx  sz.xlsx  trade_calendar_csv.py  zip_test.py
(+131 files in other folders)
